Fix overflow issue on .row class, remove map.html

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -132,6 +132,11 @@ a:focus {
     }
 }
 
+.row {
+    margin-right: 0px !important;
+    margin-left: 0px !important;
+}
+
 .intro {
     display: table;
     width: 100%;
